infrastructure/monitoring/thanos/manifests/thanos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar
  namespace: monitoring
  labels:
    app: thanos-sidecar
spec:
  clusterIP: None
  selector:
    app: prometheus
  ports:
  - name: grpc
    port: 10901
    targetPort: grpc
