infrastructure/monitoring/thanos/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
  name: thanos
  namespace: monitoring
spec:
  rules:
  - host: thanos.crownlabs.polito.it
    http:
      paths:
      - backend:
          serviceName: thanos-query
          servicePort: 16686
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - thanos.crownlabs.polito.it
    secretName: thanos-cert
